--- a/app_server/views/travel.hbs
+++ b/app_server/views/travel.hbs
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>{{title}}</title></title>
+	<title>Dive Sites - Bhaccasyoniztas Beach Resort Website Template</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
@@ -16,20 +16,20 @@
 						<div class="body">
 							<h1>Travel</h1>
 							<ul id="sites">
-			{{#each trips}}
+								{{#each trips}}
 								<li>
 									<a href="/api/trips/{{this.code}}"><img src="images/{{this.image}}" alt="Img"></a>
 									<h2><a href="/travel">{{this.name}}</a></h2>
 									{{{this.description}}}
 								</li>
-			{{/each}}
+								{{/each}}
 							</ul>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		{{> footer}}
+			{{> footer}}
 	</div>
 </body>
 </html>
